--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "HuaxiaoLiu"
 description              : &description "personal description"
 url                      : https://wangtengmei.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "wangtengmei/wangtengmei.github.io"
 teaser                   : "20231201-150300.jpg"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
