--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "HuaxiaoLiu"
-description              : &description "personal description"
+name                     : "HuaxiaoLiu"
+description              : "吉林大学副教授"
 url                      : https://wangtengmei.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "wangtengmei/wangtengmei.github.io"
