--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@
 locale                   : "en-US"
 title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : "HuaxiaoLiu"
-description              : "吉林大学副教授"
+name                     : &name "Your Name"
+description              : &description "personal description"
 url                      : https://wangtengmei.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "wangtengmei/wangtengmei.github.io"
-teaser                   : "20231201-150300.jpg"
+teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
