--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "刘华虓"
+  name             : "Huaxiao Liu"
   avatar           : "20231201-150300.jpg"
-  bio              : "吉林大学副教授"
+  bio              : "Associate Professor at Jilin University"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
